--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head> <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="google-site-verification" content="Ub6LLDfczY9apdDwMDdYBFD55voDA9LRDCfXZU0y0vE" />
 <meta name="HandheldFriendly" content="true">
     <title> HTML Crash Course </title>
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Website_icon.ico" />
