--- a/Step_1.html
+++ b/Step_1.html
@@ -129,6 +129,8 @@
           <br> </br>
           Finally you would need to close off your html tag. Try to do this yourself, but if you are stuck just paste <code> &lt;/html&gt; </code> after the closing body tag.
           <br> </br>
+          Now that you are finished, your code should look like this:
+          <img src="" width="" height="auto">
           <b> There!!! Now you have a starter template that you can use for any website you would want to make. Next we are going to learn some elements and how to use them. </b>
         </p>
       </div>
@@ -143,8 +145,10 @@
           <br></br>
           In total there are 6 header tags and the higher the number, the smaller the font of the header by default. For example, text with the h1 tags are going to have a larger font compared to text with h6 tags. You would usually use h1 for main headers and the rest of
           the headings for sub headings. In a new line after the body opening tag, include an opening h1 tag. You should be able to do this by now, but if you don't, just copy and paste <code>&lt;h1&gt;</code>. In this course we will be practising by writing about the history
-          of the iPad, but you can write about something else if you like. Then include a suitable title for your website. It can be something like "The history of the iPad". Now close off the tag and lets take a look on the website you have created. Just navigate on to the HTML file
-          right click on it and open the file with your internet browser. You would see that the title that you have written on the HTML file appears on the top of the screen with a large, black font. We will work on making it look attractive in step 2. 
+          of the iPad, but you can write about something else if you like. Then include a suitable title for your website. It can be something like "The history of the iPad". Now close off the h1 tag.
+          <br>
+          Let's take a look at the website you have just created! Just navigate on to the HTML file right click on it and open the file with your internet browser. You would see that the title that you have written on the HTML file appears on the top of the screen with a large, black font.
+          We will work on making it look attractive in step 2, using css code.
 
 
 
