--- a/Step_1.html
+++ b/Step_1.html
@@ -3,7 +3,7 @@
   <head> <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="HandheldFriendly" content="true">
-    <title> HTML Crash Course </title>
+    <title> HTML Crash Course: Step 1 </title>
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Website_icon.ico" />
     <link rel="stylesheet" href="stylesheet.css">
   </head>
