Added an image link

--- a/Step_1.html
+++ b/Step_1.html
@@ -130,8 +130,8 @@
           Finally you would need to close off your html tag. Try to do this yourself, but if you are stuck just paste <code> &lt;/html&gt; </code> after the closing body tag.
           <br> </br>
           Now that you are finished, your code should look like this:
-          <img src="" width="" height="auto">
-          <b> There!!! Now you have a starter template that you can use for any website you would want to make. Next we are going to learn some elements and how to use them. </b>
+          <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Getting%20Started%20example.png" width="100%" height="auto">
+          <b> There!!! Now you have a starter template that you can use for any website you would want to make. Next we are going to learn some elements and how to use them. If you are wondering if your website is written in the correct way, take a look at this:</b>
         </p>
       </div>
 
@@ -149,6 +149,8 @@
           <br>
           Let's take a look at the website you have just created! Just navigate on to the HTML file right click on it and open the file with your internet browser. You would see that the title that you have written on the HTML file appears on the top of the screen with a large, black font.
           We will work on making it look attractive in step 2, using css code.
+          <br>
+          You should now be able to use headers for your website. Next we are going to learn how to write paragraphs for your website.
 
 
 
