added stuff lol

--- a/Step_1.html
+++ b/Step_1.html
@@ -151,8 +151,9 @@
           We will work on making it look attractive in step 2, using css code.
           <br>
           You should now be able to use headers for your website. Next we are going to learn how to write paragraphs for your website.
-
-
+        </p>
+      </div>
+      
 
 
     </body>
