--- a/Step_1.html
+++ b/Step_1.html
@@ -153,7 +153,11 @@
           You should now be able to use headers for your website. Next we are going to learn how to write paragraphs for your website.
         </p>
       </div>
-      
+
+      <div class"Paragraphs">
+        <h3 style="margin-bottom:3%;"> Paragraphs </h3>
+        <img src="https://steemitimages.com/DQmc9CQ5Gh9Br6YDSw9ARyXpcU3SaP2FxG1PEJbTXQRRR9K/example.png" width="25%" height="auto">
+        <p> 
 
 
     </body>
