--- a/Step_1.html
+++ b/Step_1.html
@@ -147,13 +147,14 @@
           the headings for sub headings. In a new line after the body opening tag, include an opening h1 tag. You should be able to do this by now, but if you don't, just copy and paste <code>&lt;h1&gt;</code>. In this course we will be practising by writing about the history
           of the iPad, but you can write about something else if you like. Then include a suitable title for your website. It can be something like "The history of the iPad". Now close off the h1 tag.
           <br>
-          On a new line, write "What is an iPad" in between of h2 tags. That will represent your sub-heading. Remember to first open the h2 tag and then close it.
+          On a new line, write "What is an iPad?" in between of h2 tags. That will represent your sub-heading. Remember to first open the h2 tag and then close it.
           <br>
           Next, write "The first iPad" in between of h2 tags. That is another sub-heading, and it is a sibling the h2 element above.
           <br>
-          Under that line, write "When was it created?" 
+          Under that line, write "When was it created?" in between of h3 tags. That is a sub-heading of your sub-heading, which is also knows as a sub sub-heading.
+          Then, on a new line write "Why was it created" in between of h3 tags and on another line below, write "Was it successful?" in between h3 tags. This will give some practise on how headings should be used and should give you knowledge on how headings are supposed to be used.
           <br>
-          Let's take a look at the website you have just created! Just navigate on to the HTML file right click on it and open the file with your internet browser. You would see that the title that you have written on the HTML file appears on the top of the screen with a large, black font.
+          Let's take a look at the website you have just created! Just navigate on to the HTML file right click on it and open the file with your internet browser. You would see that the title and other headings that you have written on the HTML file appears on the top of the screen with a large, black font.
           We will work on making it look attractive in step 2, using css code.
           <br>
           You should now be able to use headers for your website. Next we are going to learn how to write paragraphs for your website.
@@ -163,7 +164,8 @@
       <div class"Paragraphs">
         <h3 style="margin-bottom:3%;"> Paragraphs </h3>
         <img src="https://steemitimages.com/DQmc9CQ5Gh9Br6YDSw9ARyXpcU3SaP2FxG1PEJbTXQRRR9K/example.png" width="25%" height="auto">
-        <p> In this section you will learn how to use paragraphs in your website. Paragraphs are useful for adding information about a topic on your website/
+        <p> In this section you will learn how to use paragraphs in your website. Paragraphs are useful for adding information about a topic on your website. Paragraphs are usually located below the heading or sub-heading of you website.
+
 
 
     </body>
