--- a/Step_1.html
+++ b/Step_1.html
@@ -163,7 +163,7 @@
 
       <div class"Paragraphs">
         <h3 style="margin-bottom:3%;"> Paragraphs </h3>
-        <img src="https://steemitimages.com/DQmc9CQ5Gh9Br6YDSw9ARyXpcU3SaP2FxG1PEJbTXQRRR9K/example.png" width="25%" height="auto">
+        <img src="https://steemitimages.com/DQmc9CQ5Gh9Br6YDSw9ARyXpcU3SaP2FxG1PEJbTXQRRR9K/example.png" width="25%" height="25%">
         <p> In this section you will learn how to use paragraphs in your website. Paragraphs are useful for adding information about a topic on your website. Paragraphs are usually located below the heading or sub-heading of you website.
 
 
