--- a/Step_1.html
+++ b/Step_1.html
@@ -167,6 +167,9 @@
         <p> In this section you will learn how to use paragraphs in your website. Paragraphs are useful for adding information about a topic on your website. Paragraphs are usually located below the heading or sub-heading of you website.
 
 
+      </div>
+
+
 
     </body>
 </html>
