--- a/Step_1.html
+++ b/Step_1.html
@@ -164,7 +164,7 @@
 
       <div class"paragraphs">
         <h3 style="margin-bottom:3%;"> Paragraphs </h3>
-        <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Paragraph%20image.png?raw=true" width="25%" height="25%">
+        <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Paragraph%20image.png?raw=true" width="25%" height="25%" style="float:right; margin-left:5%; right:0;">
         <p> In this section you will learn how to use paragraphs in your website. Paragraphs are useful for adding information about a topic on your website. Paragraphs are usually located below the heading or sub-heading of you website.
 
 
