--- a/Step_1.html
+++ b/Step_1.html
@@ -145,15 +145,12 @@
           <b> How do you use headers? </b>
           <br></br>
           In total there are 6 header tags and the higher the number, the smaller the font of the header by default. For example, text with the h1 tags are going to have a larger font compared to text with h6 tags. You would usually use h1 for main headers and the rest of
-          the headings for sub headings. In a new line after the body opening tag, include an opening h1 tag. You should be able to do this by now, but if you don't, just copy and paste <code>&lt;h1&gt;</code>. In this course we will be practising by writing about the history
-          of the iPad, but you can write about something else if you like. Then include a suitable title for your website. It can be something like "The history of the iPad". Now close off the h1 tag.
+          the headings for sub headings. In a new line after the body opening tag, include an opening h1 tag. You should be able to do this by now, but if you don't, just copy and paste <code>&lt;h1&gt;</code>. In this course we will be practising by writing about the first iPad,
+          but you can write about something else if you like. Then include a suitable title for your website. It can be something like "The first iPad". Now close off the h1 tag.
           <br>
           On a new line, write "What is an iPad?" in between of h2 tags. That will represent your sub-heading. Remember to first open the h2 tag and then close it.
           <br>
-          Next, write "The first iPad" in between of h2 tags. That is another sub-heading, and it is a sibling the h2 element above.
-          <br>
-          Under that line, write "When was it created?" in between of h3 tags. That is a sub-heading of your sub-heading, which is also knows as a sub sub-heading.
-          Then, on a new line write "Why was it created" in between of h3 tags and on another line below, write "Was it successful?" in between h3 tags. This will give some practise on how headings should be used and should give you knowledge on how headings are supposed to be used.
+          Next, write "When was it created?" in between of h2 tags and then on a new line write "Was it successful?" in between of h2 tags.
           <br>
           Let's take a look at the website you have just created! Just navigate on to the HTML file right click on it and open the file with your internet browser. You would see that the title and other headings that you have written on the HTML file appears on the top of the screen with a large, black font.
           We will work on making it look attractive in step 2, using css code.
@@ -166,6 +163,9 @@
         <h3 style="margin-bottom:3%;"> Paragraphs </h3>
         <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Paragraph%20image.png?raw=true" width="25%" height="25%" style="float:right; margin-left:5%; right:0;">
         <p> In this section you will learn how to use paragraphs in your website. Paragraphs are useful for adding information about a topic on your website. Paragraphs are usually located below the heading or sub-heading of you website.
+          In order to include a paragraph </p>
+
+        <p> hello </p>
 
 
       </div>
