changed some stuff

--- a/Step_1.html
+++ b/Step_1.html
@@ -163,9 +163,8 @@
         <h3 style="margin-bottom:3%;"> Paragraphs </h3>
         <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Paragraph%20image.png?raw=true" width="25%" height="25%" style="float:right; margin-left:5%; right:0;">
         <p> In this section you will learn how to use paragraphs in your website. Paragraphs are useful for adding information about a topic on your website. Paragraphs are usually located below the heading or sub-heading of you website.
-          In order to include a paragraph </p>
-
-        <p> hello </p>
+          In order to include a paragraph in your website, you would have to include <code>&lt;p&gt;</code> as your opening tag and <code>&lt;/p&gt;</code> as your closing tag. Then, you would include your content in between of those two tags.
+          In a website you would usually have to include your <code>&lt;p&gt;</code> element under a subheading. 
 
 
       </div>
