--- a/Step_1.html
+++ b/Step_1.html
@@ -164,7 +164,14 @@
         <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Paragraph%20image.png?raw=true" width="25%" height="25%" style="float:right; margin-left:5%; right:0;">
         <p> In this section you will learn how to use paragraphs in your website. Paragraphs are useful for adding information about a topic on your website. Paragraphs are usually located below the heading or sub-heading of you website.
           In order to include a paragraph in your website, you would have to include <code>&lt;p&gt;</code> as your opening tag and <code>&lt;/p&gt;</code> as your closing tag. Then, you would include your content in between of those two tags.
-          In a website you would usually have to include your <code>&lt;p&gt;</code> element under a subheading. 
+          In a website you would usually have to include your <code>&lt;p&gt;</code> element under a subheading.
+          <br>
+          In addition, according to the spaces you have in between your elements in the HTML file, is the amount of space you would have in between different groups of content in your website.
+          For example, if you have 1 empty line between a h2 element and a p element in the HTML file, you would have 1 empty line between the heading and the paragraph in the website.
+          However, this doesn't work with different groups of text in one p element and you would have to include breaks.
+          <br>
+          One way you could space your paragraph in your website is by having many different p element, seperated by empty lines. The advantage of this is that this method is the easiest for including many paragraphs under 1 heading.
+          Another method is 
 
 
       </div>
