--- a/Step_1.html
+++ b/Step_1.html
@@ -162,7 +162,7 @@
       <div class"paragraphs">
         <h3 style="margin-bottom:3%;"> Paragraphs </h3>
         <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Paragraph%20image.png?raw=true" width="25%" height="25%" style="float:right; margin-left:5%; right:0;">
-        <p> In this section you will learn how to use paragraphs in your website. Paragraphs are useful for adding information about a topic on your website. Paragraphs are usually located below the heading or sub-heading of you website.
+        <p> In this section you will learn how to use paragraphs and line breaks. in your website. Paragraphs are useful for adding information about a topic on your website. Paragraphs are usually located below the heading or sub-heading of you website.
           In order to include a paragraph in your website, you would have to include <code>&lt;p&gt;</code> as your opening tag and <code>&lt;/p&gt;</code> as your closing tag. Then, you would include your content in between of those two tags.
           In a website you would usually have to include your <code>&lt;p&gt;</code> element under a subheading.
           <br>
@@ -171,7 +171,14 @@
           However, this doesn't work with different groups of text in one p element and you would have to include breaks.
           <br>
           One way you could space your paragraph in your website is by having many different p element, seperated by empty lines. The advantage of this is that this method is the easiest for including many paragraphs under 1 heading.
-          Another method is 
+          Another method is by having only one pair of p tags under a heading and including line breaks in order to seperates pargraphs. The advantage of this is that this method is a bit faster that including new p tags everytime
+          and you would be more organised as you would have only one p tag under a heading. The disadvantage of this method is that sometimes you would need to include more than 1 line break, which could confuse some people as they
+          would not know how many to include exactly.
+          Line breaks are useful in sepreating content and adding more space between them. Although this is possible to do by adding empty lines in the HTML file itself, sometimes it is
+          best to use line break instead of loads of spaces. Take this situation in this image for example. In the first image you can see that there are lots of empty line in order to
+          create some space between the two img elements. This makes the file unorganised and you could delete the spaces if you forget what they are for, which could ruin your website.
+          In the second image you can see that with using line breaks, we have a much more organised file and you are less likely to mess up your website by removing the spaces.
+          <img 
 
 
       </div>
