--- a/Step_1.html
+++ b/Step_1.html
@@ -178,7 +178,8 @@
           best to use line break instead of loads of spaces. Take this situation in this image for example. In the first image you can see that there are lots of empty line in order to
           create some space between the two img elements. This makes the file unorganised and you could delete the spaces if you forget what they are for, which could ruin your website.
           In the second image you can see that with using line breaks, we have a much more organised file and you are less likely to mess up your website by removing the spaces.
-          <img 
+        </p>
+          <img scr="" 
 
 
       </div>
