changed names and stuff

--- a/Step_1.html
+++ b/Step_1.html
@@ -173,13 +173,15 @@
           One way you could space your paragraph in your website is by having many different p element, seperated by empty lines. The advantage of this is that this method is the easiest for including many paragraphs under 1 heading.
           Another method is by having only one pair of p tags under a heading and including line breaks in order to seperates pargraphs. The advantage of this is that this method is a bit faster that including new p tags everytime
           and you would be more organised as you would have only one p tag under a heading. The disadvantage of this method is that sometimes you would need to include more than 1 line break, which could confuse some people as they
-          would not know how many to include exactly.
+          would not know how many to include exactly. You would see this method being used in the first image.
           Line breaks are useful in sepreating content and adding more space between them. Although this is possible to do by adding empty lines in the HTML file itself, sometimes it is
           best to use line break instead of loads of spaces. Take this situation in this image for example. In the first image you can see that there are lots of empty line in order to
           create some space between the two img elements. This makes the file unorganised and you could delete the spaces if you forget what they are for, which could ruin your website.
           In the second image you can see that with using line breaks, we have a much more organised file and you are less likely to mess up your website by removing the spaces.
         </p>
-          <img scr="" 
+          <img scr="Images/Line Break Example 1.png" width="100%" height="auto" style="margin-bottom:2.5%">
+          <img scr="Images/Line Break Example 2.png" width="100%" height="auto" style="margin-bottom:2.5%">
+          <img scr="Images/Line Break Result.png" width="100%" height="auto" style="margin-bottom:2.5%">
 
 
       </div>
