changing names and stuff

--- a/Step_1.html
+++ b/Step_1.html
@@ -179,9 +179,9 @@
           create some space between the two img elements. This makes the file unorganised and you could delete the spaces if you forget what they are for, which could ruin your website.
           In the second image you can see that with using line breaks, we have a much more organised file and you are less likely to mess up your website by removing the spaces.
         </p>
-          <img scr="Images/Line Break Example 1.png" width="100%" height="auto" style="margin-bottom:2.5%">
-          <img scr="Images/Line Break Example 2.png" width="100%" height="auto" style="margin-bottom:2.5%">
-          <img scr="Images/Line Break Result.png" width="100%" height="auto" style="margin-bottom:2.5%">
+          <img src="Images/Line Break Example 1.png" width="100%" height="auto" style="margin-bottom:2.5%">
+          <img src="Images/Line Break Example 2.png" width="100%" height="auto" style="margin-bottom:2.5%">
+          <img src="Images/Line Break Result.png" width="100%" height="auto" style="margin-bottom:2.5%">
 
 
       </div>
