--- a/Step_1.html
+++ b/Step_1.html
@@ -170,7 +170,8 @@
           For example, if you have 1 empty line between a h2 element and a p element in the HTML file, you would have 1 empty line between the heading and the paragraph in the website.
           However, this doesn't work with different groups of text in one p element and you would have to include breaks.
           <br>
-          In order to get some practise do this: On a new line below the "What's an iPad?" subheading, copy and paste <a class="paragraphs">this</a>
+          In order to get some practise do this: On a new line below the "What's an iPad?" subheading, copy and paste <a href=" " class="paragraphs">this</a>
+          <br>
           One way you could space your paragraph in your website is by having many different p element, seperated by empty lines. The advantage of this is that this method is the easiest for including many paragraphs under 1 heading.
           Another method is by having only one pair of p tags under a heading and including line breaks in order to seperates pargraphs. The advantage of this is that this method is a bit faster that including new p tags everytime
           and you would be more organised as you would have only one p tag under a heading. The disadvantage of this method is that sometimes you would need to include more than 1 line break, which could confuse some people as they
@@ -189,7 +190,7 @@
           but the extra lines demonstrate that no matter how many empty lines you have, if there is one empty line between two p elements, only one spacing will be showing in the web browser. This is
           why I recommend using line breaks, because you can customise your webiste whilst keeping the HTML file organised and easy to understand and edit.
           <br> </br>
-          Now you should be able to use 
+          Now you should be able to use
 
 
       </div>
