added stuff lol

--- a/Step_1.html
+++ b/Step_1.html
@@ -132,7 +132,7 @@
           Now that you are finished, your code should look like this:
           <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Getting%20Started%20example.png" width="100%" height="auto">
           <br>
-          <b> There!!! Now you have a starter template that you can use for any website you would want to make. Next we are going to learn some elements and how to use them. If you are wondering if your website is written in the correct way, take a look at this:</b>
+          <b> There!!! Now you have a starter template that you can use for any website you would want to make. Next we are going to learn some elements and how to use them.</b>
         </p>
       </div>
 
@@ -161,7 +161,7 @@
 
       <div class"paragraphs">
         <h3 style="margin-bottom:3%;"> Paragraphs </h3>
-        <img class="pargraphs" src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Paragraph%20image.png?raw=true" width="25%" height="25%">
+        <img class="paragraphs" src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Paragraph%20image.png?raw=true" width="25%" height="25%" style="float: right; margin-left: 5%; right: 0;">
         <p> In this section you will learn how to use paragraphs and line breaks. in your website. Paragraphs are useful for adding information about a topic on your website. Paragraphs are usually located below the heading or sub-heading of you website.
           In order to include a paragraph in your website, you would have to include <code>&lt;p&gt;</code> as your opening tag and <code>&lt;/p&gt;</code> as your closing tag. Then, you would include your content in between of those two tags.
           In a website you would usually have to include your <code>&lt;p&gt;</code> element under a subheading.
@@ -169,15 +169,16 @@
           In addition, according to the spaces you have in between your elements in the HTML file, is the amount of space you would have in between different groups of content in your website.
           For example, if you have 1 empty line between a h2 element and a p element in the HTML file, you would have 1 empty line between the heading and the paragraph in the website.
           However, this doesn't work with different groups of text in one p element and you would have to include breaks.
-          <br>
-          In order to get some practise do this: On a new line below the "What's an iPad?" subheading, copy and paste <a href=" " class="paragraphs">this</a>
-          <br>
-          One way you could space your paragraph in your website is by having many different p element, seperated by empty lines. The advantage of this is that this method is the easiest for including many paragraphs under 1 heading.
+          <br> </br>
+          One way you could space your paragraph in your website is by having many different p elements, seperated by empty lines. The advantage of this is that this method is the easiest for including many paragraphs under 1 heading.
           Another method is by having only one pair of p tags under a heading and including line breaks in order to seperates pargraphs. The advantage of this is that this method is a bit faster that including new p tags everytime
           and you would be more organised as you would have only one p tag under a heading. The disadvantage of this method is that sometimes you would need to include more than 1 line break, which could confuse some people as they
           would not know how many to include exactly. You would see this method being used in the first image.
+          <br>
           Line breaks are useful in sepreating content and adding more space between them. Although this is possible to do by adding empty lines in the HTML file itself, sometimes it is
-          best to use line break instead of loads of spaces. Take this situation in this image for example. In the first image you can see that there are lots of empty line in order to
+          best to use line break instead of loads of spaces.
+          <br> </br>
+          Take this situation in this image for example. In the first image you can see that there are lots of empty line in order to
           create some space between the two img elements. This makes the file unorganised and you could delete the spaces if you forget what they are for, which could ruin your website.
           In the second image you can see that with using line breaks, we have a much more organised file and you are less likely to mess up your website by removing the spaces. I
           recommend using line breaks, because you have more freedom to choose where to put a line break and how many line breaks.
@@ -189,8 +190,12 @@
           As you would be able to see, the example without any line breaks needs lots of empty lines in order to have one space. This can also be done with only one empty line between the 2 elements,
           but the extra lines demonstrate that no matter how many empty lines you have, if there is one empty line between two p elements, only one spacing will be showing in the web browser. This is
           why I recommend using line breaks, because you can customise your webiste whilst keeping the HTML file organised and easy to understand and edit.
+          <br>
+          <b>You should also remember that it doesn't matter if you close off the line break or not. Either the closing or the opening tag would work as line breaks for your website and if you open a br element,
+            you don't need to close it. </b>
           <br> </br>
-          Now you should be able to use
+          In order to get some practise do this: On a new line below the "What's an iPad?" subheading, copy and paste <a href="iPad first paragraph.txt" class="paragraphs" target="_blank">this</a>. Then, add 2 line breaks, or
+          close off this p element and start a new one 2 lines below (you need to have an empty line in between them)
 
 
       </div>
