Added some stuff and also edited the navbar

--- a/Step_1.html
+++ b/Step_1.html
@@ -165,7 +165,7 @@
         <p> In this section you will learn how to use paragraphs and line breaks. in your website. Paragraphs are useful for adding information about a topic on your website. Paragraphs are usually located below the heading or sub-heading of you website.
           In order to include a paragraph in your website, you would have to include <code>&lt;p&gt;</code> as your opening tag and <code>&lt;/p&gt;</code> as your closing tag. Then, you would include your content in between of those two tags.
           In a website you would usually have to include your <code>&lt;p&gt;</code> element under a subheading.
-          <br>
+          <br></br>
           In addition, according to the spaces you have in between your elements in the HTML file, is the amount of space you would have in between different groups of content in your website.
           For example, if you have 1 empty line between a h2 element and a p element in the HTML file, you would have 1 empty line between the heading and the paragraph in the website.
           However, this doesn't work with different groups of text in one p element and you would have to include breaks.
@@ -174,7 +174,7 @@
           Another method is by having only one pair of p tags under a heading and including line breaks in order to seperates pargraphs. The advantage of this is that this method is a bit faster that including new p tags everytime
           and you would be more organised as you would have only one p tag under a heading. The disadvantage of this method is that sometimes you would need to include more than 1 line break, which could confuse some people as they
           would not know how many to include exactly. You would see this method being used in the first image.
-          <br>
+          <br></br>
           Line breaks are useful in sepreating content and adding more space between them. Although this is possible to do by adding empty lines in the HTML file itself, sometimes it is
           best to use line break instead of loads of spaces.
           <br> </br>
@@ -190,11 +190,11 @@
           As you would be able to see, the example without any line breaks needs lots of empty lines in order to have one space. This can also be done with only one empty line between the 2 elements,
           but the extra lines demonstrate that no matter how many empty lines you have, if there is one empty line between two p elements, only one spacing will be showing in the web browser. This is
           why I recommend using line breaks, because you can customise your webiste whilst keeping the HTML file organised and easy to understand and edit.
-          <br>
+          <br></br>
           <b>You should also remember that it doesn't matter if you close off the line break or not. Either the closing or the opening tag would work as line breaks for your website and if you open a br element,
             you don't need to close it. </b>
           <br> </br>
-          In order to get some practise do this: On a new line below the "What's an iPad?" subheading, copy and paste <a href="iPad first paragraph.txt" class="paragraphs" target="_blank">this</a>. Then, add 2 line breaks, or
+          In order to get some practise do this: On a new line below the "What's an iPad?" subheading, copy and paste <a href="iPad first paragraph.html" class="paragraphs" target="_blank">this</a>. Then, add 2 line breaks, or
           close off this p element and start a new one 2 lines below (you need to have an empty line in between them)
 
 
