made stuff better

--- a/Step_1.html
+++ b/Step_1.html
@@ -6,12 +6,14 @@
     <title> HTML Crash Course: Step 1 </title>
     <link rel="shortcut icon" href="Images/Website_icon.ico" />
     <link rel="stylesheet" href="stylesheet.css">
+    <a class="homepage_shortcut" href="index.html">
+      <img src="Images/Web logo.png" width="10%" height="auto">
+    </a>
   </head>
 
     <body>
 
       <div class="navbar">
-      <a href="https://veryniceperson.github.io">Homepage</a>
       <a href="Sources.html">Sources</a>
       <div class="dropdown">
         <button class="dropbtn"> Courses
@@ -171,7 +173,7 @@
           However, this doesn't work with different groups of text in one p element and you would have to include breaks.
           <br> </br>
           One way you could space your paragraph in your website is by having many different p elements, seperated by empty lines. The advantage of this is that this method is the easiest for including many paragraphs under 1 heading.
-          Another method is by having only one pair of p tags under a heading and including line breaks in order to seperates pargraphs. The advantage of this is that this method is a bit faster that including new p tags everytime
+          Another method is by having only one pair of p tags under a heading and including line breaks in order to seperates pargraphs. The advantage of this is that this method is a bit faster than including new p tags everytime
           and you would be more organised as you would have only one p tag under a heading. The disadvantage of this method is that sometimes you would need to include more than 1 line break, which could confuse some people as they
           would not know how many to include exactly. You would see this method being used in the first image.
           <br></br>
