made stuff better

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title> HTML Crash Course </title>
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Website_icon.ico" />
     <link rel="stylesheet" href="stylesheet.css">
+    <a class="homepage_shortcut" href="index.html">
+      <img src="Images/Web logo.png" width="10%" height="auto">
+    </a>
   </head>
 
   <body>
 
     <div class="navbar">
-      <a href="https://veryniceperson.github.io">Homepage</a>
       <a href="Sources.html">Sources</a>
     <div class="dropdown">
       <button class="dropbtn"> Courses
