Added an example website to help out the normies get what i am talking about

--- a/Step_1.html
+++ b/Step_1.html
@@ -83,7 +83,7 @@
       </div>
 
       <div class="Getting_Started">
-        <h3 style="margin-botton:3%;"> Getting Started </h3>
+        <h3 style="margin-bottom:3%;"> Getting Started </h3>
         <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Visual%20Studio%20Image.png" width="20%" height="20%">
         <p> Now we are going to start writing some code! So get your keybooard ready and let's get started!
           <br> </br>
@@ -152,7 +152,7 @@
           <br>
           On a new line, write "What is an iPad?" in between of h2 tags. That will represent your sub-heading. Remember to first open the h2 tag and then close it.
           <br>
-          Next, write "When was it created?" in between of h2 tags and then on a new line write "Was it successful?" in between of h2 tags.
+          Next, write "When was it created?" in between of h2 tags and then on a new line write "Was it successful?" in between of h2 tags. Lastly add "Pros and Cons" on a new line in between two h2 tags.
           <br>
           Let's take a look at the website you have just created! Just navigate on to the HTML file right click on it and open the file with your internet browser. You would see that the title and other headings that you have written on the HTML file appears on the top of the screen with a large, black font.
           We will work on making it look attractive in step 2, using css code.
@@ -196,8 +196,8 @@
           <b>You should also remember that it doesn't matter if you close off the line break or not. Either the closing or the opening tag would work as line breaks for your website and if you open a br element,
             you don't need to close it. </b>
           <br> </br>
-          In order to get some practise do this: On a new line below the "What's an iPad?" subheading, copy and paste <a href="iPad first paragraph.html" class="paragraphs" target="_blank">this</a>. Then, add 2 line breaks, or
-          close off this p element and start a new one 2 lines below (you need to have an empty line in between them)
+          In order to get some practise do this: On a new line below the "What's an iPad?" subheading, copy and paste <a href="iPad first paragraph.html" class="paragraphs" target="_blank">this</a> in between of p tags. Then, add 2 line breaks, or
+          close off this p element and start a new one 2 lines below (you need to have an empty line in between them). Then under 
 
 
       </div>
