--- a/Step_1.html
+++ b/Step_1.html
@@ -25,6 +25,7 @@
         </div>
       </div>
       <a href="Sources.html">Sources</a>
+      <a href="Website example.html">Cheat sheet</a>
       </div>
 
       <h1> Step 1: Writing the HTML code for your website </h1>
