made the target blank, coz it is annyoung to lost the main website

--- a/Step_1.html
+++ b/Step_1.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <a href="Sources.html">Sources</a>
-      <a href="Website example.html">Cheat sheet</a>
+      <a href="Website example.html" target="_blank">Cheat sheet</a>
       </div>
 
       <h1> Step 1: Writing the HTML code for your website </h1>
