--- a/Website example.html
+++ b/Website example.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>Website example</title>
+        <style>
+            body {background-color:black; color:white;}
+
+        </style>
+        </style>
     </head>
 
     <body>
