added a paragraph for the Whats an iPad thingy

--- a/iPad first paragraph.html
+++ b/iPad first paragraph.html
@@ -8,10 +8,15 @@
   <meta name="CocoaVersion" content="2004.1">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Courier; color: #000000; -webkit-text-stroke: #000000}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Courier; color: #000000; -webkit-text-stroke: #000000; min-height: 14.0px}
     span.s1 {font-kerning: none}
   </style>
 </head>
 <body>
 <p class="p1"><span class="s1">The iPad is a tablet computer developed by Apple. It is smaller than a typical laptop, but significantly larger than the average smartphone. The iPad does not include a keyboard or a trackpad, but instead has a touchscreen interface, which is used to control the device.</span></p>
+<p class="p2"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1">The iPad comes in four models and sizes with apps capable of handling many of our routine tasks. These include a web browser, a mail client, a calendar, an alarm clock, a maps package, a notepad, a video conferencing app, and a contacts list. It also includes tablet-specific apps, such as a camera, a photo app, a video library, and an app for playing music.<span class="Apple-converted-space"> </span></span></p>
+<p class="p2"><span class="s1"></span><br></p>
+<p class="p2"><span class="s1"></span><br></p>
 </body>
 </html>
