made the font size bigger in the whats an ipad thingy, so it is easy to copy and paste

--- a/Step_1.html
+++ b/Step_1.html
@@ -197,8 +197,8 @@
           <b>You should also remember that it doesn't matter if you close off the line break or not. Either the closing or the opening tag would work as line breaks for your website and if you open a br element,
             you don't need to close it. </b>
           <br> </br>
-          In order to get some practise do this: On a new line below the "What's an iPad?" subheading, copy and paste the first paragraph from <a href="iPad first paragraph.html" class="paragraphs" target="_blank">this</a> in between of p tags. Then, add 2 line breaks, or
-          close off this p element and start a new one 2 lines below (you need to have an empty line in between them). After that, add the second paragraph from 
+          In order to get some practise do this: On a new line below the "What's an iPad?" subheading, copy and paste the first paragraph from <a href="Whats an iPad.html" class="paragraphs" target="_blank">this</a> in between of p tags. Then, add 2 line breaks, or
+          close off this p element and start a new one 2 lines below (you need to have an empty line in between them). After that, add the second paragraph from <a href="Whats an iPad.html" class="paragraphs" target="_blank">this</a>.
 
 
       </div>
