--- a/Step_1.html
+++ b/Step_1.html
@@ -25,10 +25,18 @@
         </div>
       </div>
       <a href="Sources.html">Sources</a>
-      <a href="Website example.html" target="_blank">Cheat sheet</a>
+      <div class="dropdown">
+        <button class="dropbtn"> Help!
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="Website example.html" target="_blank">Click here if you are stuck</a>
+        </div>
+      </div>
+      </div>
       </div>
 
-      <h1> Step 1: Writing the HTML code for your website </h1>
+      <h1 style="margin-top: 5%;"> Step 1: Writing the HTML code for your website </h1>
 
       <h2> In order to start creating your website you would need to learn how to code in HTML. In this step you
       will learn basic HTML, in order to write all of the content of your website.
