--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <a href="Sources.html">Sources</a>
     </div>
 
-    <h1> HTML Coding Crash Course </h1>
+    <h1 style="margin-top: 5%;"> HTML Coding Crash Course </h1>
 
     <h2> Hey there! Have you ever wanted to learn how to make websites using HTML and CSS code?
      Well, you have come to the right place. This website would help you start programming
