--- a/Website example.html
+++ b/Website example.html
@@ -3,7 +3,7 @@
     <head>
         <title>Website example</title>
         <style>
-            body {background-color:black; color:white;}
+            body {background-color:black; color:white; font-size: 18px;}
 
         </style>
         </style>
