added some stuff

--- a/Step_1.html
+++ b/Step_1.html
@@ -181,8 +181,8 @@
           For example, if you have 1 empty line between a h2 element and a p element in the HTML file, you would have 1 empty line between the heading and the paragraph in the website.
           However, this doesn't work with different groups of text in one p element and you would have to include breaks.
           <br> </br>
-          One way you could space your paragraph in your website is by having many different p elements, seperated by empty lines. The advantage of this is that this method is the easiest for including many paragraphs under 1 heading.
-          Another method is by having only one pair of p tags under a heading and including line breaks in order to seperates pargraphs. The advantage of this is that this method is a bit faster than including new p tags everytime
+          One way you could space your paragraph in your website is by having many different p elements. A new p element allows elements to have a double line break in between them, as if you had pressed the enter key.
+          Another method is by having only one pair of p tags under a heading and including line breaks in order to seperates paragraphs. The advantage of this is that this method is a bit faster than including new p tags everytime
           and you would be more organised as you would have only one p tag under a heading. The disadvantage of this method is that sometimes you would need to include more than 1 line break, which could confuse some people as they
           would not know how many to include exactly. You would see this method being used in the first image.
           <br></br>
@@ -206,7 +206,10 @@
             you don't need to close it. </b>
           <br> </br>
           In order to get some practise do this: On a new line below the "What's an iPad?" subheading, copy and paste the first paragraph from <a href="Whats an iPad.html" class="paragraphs" target="_blank">this</a> in between of p tags. Then, add 2 line breaks, or
-          close off this p element and start a new one 2 lines below (you need to have an empty line in between them). After that, add the second paragraph from <a href="Whats an iPad.html" class="paragraphs" target="_blank">this</a>.
+          close off this p element and start a new one 2 lines below (you need to have an empty line in between them). After that, add the second paragraph from <a href="Whats an iPad.html" class="paragraphs" target="_blank">this</a>. If you are finished, your website
+          should look something like this:
+          </p>
+          <img src="" width="100%" height="auto">
 
 
       </div>
