--- a/Website example.html
+++ b/Website example.html
@@ -25,8 +25,11 @@
             &lt;p&gt;The iPad is a tablet computer developed by Apple. It is smaller than a typical laptop,
             but significantly larger than the average smartphone. The iPad does not include a keyboard or a trackpad, 
             but instead has a touchscreen interface, which is used to control the device.
-            &lt;/p&gt;
             &lt;br&gt;&lt;br&gt;
+            The iPad came with apps capable of handling many of our routine tasks. 
+            These include a web browser, a mail client, a calendar, an alarm clock, a maps package, a notepad, a video conferencing app, 
+            and a contacts list. It also includes tablet-specific apps, such as a camera, a photo app, a video library, and an app for playing music. 
+            &lt;/p&gt;
             &lt;h2&gt;When was it created?&lt;/h2&gt;
             &lt;h2&gt;Was it successful?&lt;/h2&gt;
             &lt;h2&gt;Pros and Cons&lt;/h2&gt;
